[package]
name = "nickel_cookies"
version = "0.1.0"
authors = ["Kevin Butler <haqkrs@gmail.com>"]
description = "Cookies support for nickel.rs"
license = "MIT"
repository = "https://github.com/nickel-org/cookies"

[features]
default = ["secure"]
secure = ["cookie/secure"]

[dependencies]
typemap = "0.3"
plugin = "0.2"
lazy_static = "0.2"
rand = "0.3"
nickel = "^0.9"

[dependencies.cookie]
version = "^0.2"
default-features = false

[dependencies.hyper]
version = "^0.9"
default-features = false
