[package]
name = "nickel_cookies"
version = "0.3.1"
authors = ["Kevin Butler <haqkrs@gmail.com>"]
description = "Cookies support for nickel.rs"
license = "MIT"
repository = "https://github.com/nickel-org/cookies"

[features]
default = ["secure"]
secure = ["cookie/secure"]

[dependencies]
typemap = "0.3"
plugin = "0.2"
lazy_static = "1.0"
rand = "0.6"
nickel = ">=0.10"

[dependencies.cookie]
version = "0.12"
default-features = false

[dependencies.hyper]
version = "^0.10"
default-features = false
